force-app/main/default/objects/Training_Course__c/Training_Course__c.object-meta.xml
<CustomObject>
    <label>Training Course</label>
    <nameField>
        <displayFormat>COURSE-{0000}</displayFormat>
        <label>Course ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>