force-app/main/default/objects/Training_Course__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <label>Course Title</label>
    <type>Text</type>
    <length>255</length>
</CustomField>