force-app/main/default/objects/Training_Course__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <label>Duration (Days)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>SNEAKY TRAP: Label says Days, but API name is Duration_Hours__c.</description>
</CustomField>