force-app/main/default/objects/Training_Course__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Courses</relationshipName>
</CustomField>